# DigiC-PC

./: .a.c.swp  .gitignore  CMakeLists.txt  DigiC-PC.sln  DigiC-PC.vcxproj  DigiC-PC.vcxproj.filters  test.txt
CMakeModule/: FindD2XX.cmake  FindMPSSE_SPI.cmake
DigiC-PC/: DigiC-PC.vcxproj  DigiC-PC.vcxproj.filters
DigiC-PC/inc/: DigiCDriver.h  FTDUtil.h  spi.h
DigiC-PC/src/: DigiCDataUtil.cpp  DigiCDriver.cpp  FTDUtil.cpp  main.cpp  spi.cpp
inc/: FTDUtil.h  spi.h
src/: FTDUtil.cpp  main.cpp  spi.cpp
streaming/: ffserver-Config  ffserver.config  in.txt
