
CMAKE_MINIMUM_REQUIRED(VERSION 3.7)
project(DigiC-PC)
LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/CMakeModule")
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_VERBOSE_MAKEFILE ON)


SET(D2XX_PATH ${CMAKE_CURRENT_LIST_DIR}/lib/D2XX/)
SET(MPSSE_SPI_PATH ${CMAKE_CURRENT_LIST_DIR}/lib/LibMPSSE-SPI)
#FIND_PACKAGE(D2XX REQUIRED)
FIND_PACKAGE(MPSSE_SPI REQUIRED)


IF (WIN32)
    MESSAGE(STATUS "Under WIN32 Platform")
    ADD_DEFINITIONS(-DOS_WIN32)
ELSEIF (UNIX)
    MESSAGE(STATUS "Under UNIX Platform")
    ADD_DEFINITIONS(-DOS_UNIX)
ENDIF ()



SET(SOURCES src/main.cpp
        src/FTDUtil.cpp)

add_executable(${PROJECT_NAME} ${SOURCES})

target_include_directories(${PROJECT_NAME}
        PUBLIC ./inc
        PUBLIC ${MPSSE_SPI_INCLUDE_DIR}
        )
target_link_libraries(${PROJECT_NAME} PUBLIC ${MPSSE_SPI_STATIC_LIB})
#target_link_libraries(${PROJECT_NAME} PUBLIC ${D2XX_STATIC_LIB})
